# fast-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_03_2130-2b99d73fdfc0_first_generation.py
docs/: README.md  api-specifications.md  architecture-design-document.md  database-schemas.md  security-and-authorization.md
scripts/: startup.sh
src/: main.py  manage.py
src/common/: database.py  logging.py  repository.py
src/common/utils/: dependencies.py  gcs_client.py  helpers.py  path.py  settings.py
src/core/: exceptions.py  models.py  schemas.py  types.py
src/features/auth/: models.py  oauth_router.py  repository.py  router.py  schemas.py
src/features/auth/oauth_clients/: apple_client.py  google_client.py
src/features/auth/services/: authentication.py
src/features/auth/utils/: cookie.py  dependencies.py  oauth.py  password.py  role_scope_mapping.py  scopes.py
src/features/users/: models.py  repository.py  router.py  schemas.py
src/features/users/services/: cleanup.py  users.py
src/features/users/utils/: dependencies.py  export_schemas.py  management.py
