[project]
name = "fast-backend"
version = "0.8"
description = "Quickly have a running production-grade FastAPI backend"
authors = [{ name = "Yann Mazita", email = "dev.mazita@gmail.com" }]
license = { text = "GPL3" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard] (>=0.116.1,<0.117.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  "sqlalchemy (>=2.0.42,<3.0.0)",
  "asyncpg (>=0.30.0,<0.31.0)",
  "authlib (>=1.6.1,<2.0.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "argon2-cffi (>=25.1.0,<26.0.0)",
  "alembic (>=1.16.4,<2.0.0)",
  "structlog (>=25.4.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.15"
ruff = "^0.12.7"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
gitingest = "^0.3.1"
pytest-asyncio = "^1.1.0"
