[project]
name = "fast-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "fastapi[standard]>=0.136.3",
    "google-cloud-storage>=3.11.0",
    "joserfc>=1.7.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]
